--- a/.releaserc
+++ b/.releaserc
@@ -4,4 +4,5 @@ branches:
 plugins:
   - "@semantic-release/commit-analyzer"
   - "@semantic-release/release-notes-generator"
+  - "@semantic-release/github"
 
